[workspace]
resolver = "2"
members = [
    "bignp256",
    "bp256",
    "bp384",
    "ed448-goldilocks",
    "hash2curve",
    "k256",
    "p192",
    "p224",
    "p256",
    "p384",
    "p521",
    "primefield",
    "primeorder",
    "sm2",
    "x448",
]

[workspace.package]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Internal workspace crates
ed448-goldilocks = { path = "ed448-goldilocks", version = "0.14.0-pre.10", default-features = false }
hash2curve = { path = "hash2curve", version = "0.14.0-rc.10" }
primefield = { path = "primefield", version = "0.14.0-rc.7" }
primeorder = { path = "primeorder", version = "0.14.0-rc.7" }

# Cryptographic primitives
ecdsa = { version = "0.17.0-rc.16", default-features = false, features = ["der"] }
ecdsa-core = { package = "ecdsa", version = "0.17.0-rc.16", default-features = false, features = ["der"] }
elliptic-curve = { version = "0.14.0-rc.28", default-features = false, features = ["sec1"] }
signature = { version = "3.0.0-rc.10", default-features = false, features = ["digest", "rand_core"] }

# Hash functions
belt-hash = { version = "0.2.0-rc.5", default-features = false }
digest = "0.11.0-rc.12"
sha2 = { version = "0.11.0-rc.5", default-features = false }
sha3 = { version = "0.11.0-rc.7", default-features = false }
sm3 = { version = "0.5.0-rc.5", default-features = false }

# Encoding / serialization
base16ct = "1"
der = "0.8.0-rc.12"
hex = "0.4"
hex-literal = "1"
pkcs8 = "0.11.0-rc.11"
sec1 = "0.8.0-rc.13"
serdect = { version = "0.4", default-features = false }

# Key derivation / MAC
hkdf = "0.13.0-rc.5"
hmac = "0.13.0-rc.5"
rfc6979 = "0.5.0-rc.5"

# Big integer / field arithmetic
bigint = { package = "crypto-bigint", version = "0.7.0-rc.27", default-features = false, features = ["rand_core", "hybrid-array", "subtle"] }
common = { package = "crypto-common", version = "0.2.0", features = ["rand_core"] }
cpubits = "0.1"
ff = { package = "rustcrypto-ff", version = "0.14.0-rc.0", default-features = false }
fiat-crypto = { version = "0.3", default-features = false }

# Core utilities
rand_core = { version = "0.10", default-features = false }
subtle = { version = "2.6", default-features = false, features = ["const-generics"] }
zeroize = { version = "1.8", default-features = false, features = ["zeroize_derive"] }

# Ed448 specific
chacha20 = { version = "0.10.0", features = ["rng"] }
ed448 = { version = "0.5.0-rc.5", default-features = false }
getrandom = { version = "0.4", features = ["sys_rng"] }

# Dev / testing
criterion = { version = "0.8", default-features = false }
num-bigint = "0.4"
num-traits = "0.2"
proptest = { version = "1.10", features = ["attr-macro"] }
serde_bare = "0.5"
serde_json = "1.0"

[profile.dev]
opt-level = 2

[patch.crates-io]
ed448-goldilocks = { version = "=0.14.0-pre.10", path = "ed448-goldilocks" }
hash2curve = { version = "=0.14.0-rc.10", path = "hash2curve" }
primefield = { version = "=0.14.0-rc.7", path = "primefield" }
primeorder = { version = "=0.14.0-rc.7", path = "primeorder" }
