[package]
name = "bignp256"
version = "0.14.0-rc.7"
description = """
Pure Rust implementation of the Bign P-256 (a.k.a. bign-curve256v1)
elliptic curve as defined in STB 34.101.45-2013, with
general purpose curve arithmetic
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/bignp256"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/bignp256"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "stb", "bign-curve256v1", "bignp256"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
elliptic-curve = { workspace = true, default-features = true }

# optional dependencies
belt-hash = { workspace = true, optional = true }
der = { workspace = true }
digest = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
rand_core = { workspace = true, default-features = true }
rfc6979 = { workspace = true, optional = true }
pkcs8 = { workspace = true, optional = true }
primefield = { workspace = true, optional = true }
primeorder = { workspace = true, optional = true }
sec1 = { workspace = true, optional = true }
signature = { workspace = true, optional = true, default-features = true }

[dev-dependencies]
criterion = { workspace = true }
elliptic-curve = { workspace = true, features = ["dev"] }
hex-literal = { workspace = true }
primeorder = { workspace = true, features = ["dev"] }
proptest = { workspace = true }

[features]
default = ["ecdh", "ecdsa", "pem", "std"]
alloc = ["elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "elliptic-curve/std", "getrandom"]

arithmetic = ["dep:primefield", "dep:primeorder", "elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
ecdsa = ["arithmetic", "dep:rfc6979", "dep:signature", "dep:belt-hash"]
getrandom = ["elliptic-curve/getrandom"]
pem = ["pkcs8/pem", "sec1/pem"]
pkcs8 = ["dep:pkcs8"]
ecdh = ["arithmetic", "elliptic-curve/ecdh", "dep:digest", "dep:hkdf", "dep:hmac", "dep:belt-hash", "alloc"]
serde = ["elliptic-curve/serde", "primeorder?/serde"]
test-vectors = ["dep:hex-literal"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(cpubits, values("16", "32", "64"))']

[[bench]]
name = "field"
harness = false
required-features = ["arithmetic"]

[[bench]]
name = "point"
harness = false
required-features = ["arithmetic"]

[[bench]]
name = "scalar"
harness = false
required-features = ["arithmetic"]

[package.metadata.docs.rs]
all-features = true
