[package]
name = "ed448-goldilocks"
version = "0.14.0-pre.10"
authors = ["RustCrypto Developers"]
categories = ["cryptography"]
keywords = ["cryptography", "decaf", "ed448", "ed448-goldilocks"]
homepage = "https://docs.rs/ed448-goldilocks/"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/ed448-goldilocks"
documentation = "https://docs.rs/ed448-goldilocks"
license = "Apache-2.0 OR MIT"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
description = """A pure-Rust implementation of Ed448 and Curve448 and Decaf.
This crate also includes signing and verifying of Ed448 signatures.
"""

[dependencies]
elliptic-curve = { workspace = true, default-features = true, features = ["arithmetic", "pkcs8"] }
hash2curve = { workspace = true }
rand_core = { workspace = true }
sha3 = { workspace = true }
subtle = { workspace = true }

# optional dependencies
ed448 = { workspace = true, optional = true }
serdect = { workspace = true, optional = true, default-features = true }
signature = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true, features = ["cargo_bench_support"] }
getrandom = { workspace = true }
hex-literal = { workspace = true }
hex = { workspace = true }
proptest = { workspace = true }
chacha20 = { workspace = true }
serde_bare = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["std", "signing", "pkcs8"]
alloc = ["ed448?/alloc", "elliptic-curve/alloc", "serdect?/alloc", "signature?/alloc"]
std = ["alloc", "getrandom"]

bits = ["elliptic-curve/bits"]
getrandom = ["elliptic-curve/getrandom"]
pkcs8 = ["ed448?/pkcs8", "elliptic-curve/pkcs8"]
signing = ["dep:ed448", "dep:signature"]
serde = ["dep:serdect", "ed448?/serde_bytes"]

[[bench]]
harness = false
name = "bench"

[package.metadata.docs.rs]
all-features = true
