[package]
name = "hash2curve"
version = "0.14.0-rc.10"
description = "hash2curve algorithm implementation"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/hash2curve"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/hash2curve"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["hash2curve", "crypto", "ecc"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
digest = { workspace = true }
elliptic-curve = { workspace = true, features = ["arithmetic"] }

[dev-dependencies]
hex-literal = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
