[package]
name = "k256"
version = "0.14.0-rc.7"
description = """
secp256k1 elliptic curve library written in pure Rust with support for ECDSA
signing/verification/public-key recovery, Taproot Schnorr signatures (BIP340),
Elliptic Curve Diffie-Hellman (ECDH), and general-purpose secp256k1 elliptic
curve group operations which can be used to implement arbitrary protocols
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/k256"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/k256"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "no-std"]
keywords = ["bitcoin", "crypto", "ecc", "ethereum", "secp256k1"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
cpubits = { workspace = true }
elliptic-curve = { workspace = true }
hash2curve = { workspace = true, optional = true }

# optional dependencies
ecdsa-core = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
primeorder = { workspace = true, optional = true }
serdect = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
signature = { workspace = true, optional = true, default-features = true }

[dev-dependencies]
criterion = { workspace = true }
ecdsa-core = { workspace = true, features = ["dev"] }
hex = { workspace = true }
hex-literal = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
proptest = { workspace = true }
sha3 = { workspace = true }

[features]
default = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "schnorr", "std"]
alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc"]
std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std", "getrandom"]

arithmetic = ["elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
critical-section = ["elliptic-curve/critical-section", "precomputed-tables"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/algorithm", "sha256"]
expose-field = ["arithmetic"]
hash2curve = ["arithmetic", "dep:hash2curve", "dep:primeorder", "primeorder/hash2curve"]
group-digest = ["hash2curve", "sha2"]
getrandom = ["ecdsa-core?/getrandom", "elliptic-curve/getrandom"]
pem = ["ecdsa-core/pem", "elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa-core/pkcs8", "elliptic-curve/pkcs8"]
precomputed-tables = ["arithmetic", "elliptic-curve/basepoint-table"]
schnorr = ["arithmetic", "sha256", "signature"]
serde = ["ecdsa-core/serde", "elliptic-curve/serde", "pkcs8", "serdect"]
sha256 = ["digest", "sha2"]
test-vectors = ["hex-literal"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(cpubits, values("16", "32", "64"))']

[[bench]]
name = "ecdsa"
harness = false
required-features = ["ecdsa", "sha256"]

[[bench]]
name = "field"
harness = false
required-features = ["expose-field"]

[[bench]]
name = "scalar"
harness = false

[package.metadata.docs.rs]
features = ["ecdh", "ecdsa", "schnorr"]
