[package]
name = "p224"
version = "0.14.0-rc.7"
description = """
Pure Rust implementation of the NIST P-224 (a.k.a. secp224r1) elliptic curve
as defined in SP 800-186
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/p224"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/p224"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "secp224r1"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
elliptic-curve = { workspace = true }

# optional dependencies
ecdsa-core = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
primefield = { workspace = true, optional = true }
primeorder = { workspace = true, optional = true }
serdect = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
ecdsa-core = { workspace = true, features = ["dev"] }
hex-literal = { workspace = true }
primeorder = { workspace = true, features = ["dev"] }

[features]
default = ["arithmetic", "ecdsa", "pem", "std"]
alloc = ["elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "elliptic-curve/std", "getrandom"]

arithmetic = ["dep:primefield", "dep:primeorder", "elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/algorithm", "sha224"]
getrandom = ["ecdsa-core?/getrandom", "elliptic-curve/getrandom"]
pem = ["elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa-core?/pkcs8", "elliptic-curve/pkcs8"]
serde = ["ecdsa-core?/serde", "elliptic-curve/serde", "primeorder?/serde", "serdect"]
sha224 = ["digest", "sha2"]
test-vectors = ["dep:hex-literal"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(p224_backend, values("bignum", "fiat"))', # default: "fiat"
    'cfg(cpubits, values("16", "32", "64"))'
]

[package.metadata.docs.rs]
all-features = true
