[package]
name = "p384"
version = "0.14.0-rc.7"
description = """
Pure Rust implementation of the NIST P-384 (a.k.a. secp384r1) elliptic curve
as defined in SP 800-186 with support for ECDH, ECDSA signing/verification,
and general purpose curve arithmetic support.
"""
authors = ["RustCrypto Developers", "Frank Denis <github@pureftpd.org>"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/p384"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/p384"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "secp384r1"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
elliptic-curve = { workspace = true }

# optional dependencies
ecdsa-core = { workspace = true, optional = true }
hash2curve = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
primefield = { workspace = true, optional = true }
primeorder = { workspace = true, optional = true }
serdect = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[target.'cfg(not(p384_backend = "bignum"))'.dependencies]
fiat-crypto = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
ecdsa-core = { workspace = true, features = ["dev"] }
hex-literal = { workspace = true }
primeorder = { workspace = true, features = ["dev"] }
proptest = { workspace = true }

[features]
default = ["arithmetic", "ecdsa", "pem", "std"]
alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std", "getrandom"]

arithmetic = [
    "dep:primefield",
    "dep:primeorder",
    "elliptic-curve/arithmetic",
    "elliptic-curve/digest"
]
bits = ["arithmetic", "elliptic-curve/bits"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/algorithm", "sha384"]
expose-field = ["arithmetic"]
hash2curve = ["arithmetic", "dep:hash2curve", "primeorder/hash2curve"]
getrandom = ["ecdsa-core?/getrandom", "elliptic-curve/getrandom"]
group-digest = ["hash2curve", "sha2"]
oprf = ["group-digest"]
pem = ["elliptic-curve/pem", "ecdsa-core/pem", "pkcs8"]
pkcs8 = ["ecdsa-core/pkcs8", "elliptic-curve/pkcs8"]
serde = ["ecdsa-core?/serde", "elliptic-curve/serde", "primeorder?/serde", "serdect"]
sha384 = ["digest", "sha2"]
test-vectors = ["hex-literal"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(p384_backend, values("bignum", "fiat"))', # default: "fiat"
    'cfg(cpubits, values("16", "32", "64"))'
]

[[bench]]
name = "field"
harness = false
required-features = ["expose-field"]

[[bench]]
name = "scalar"
harness = false

[package.metadata.docs.rs]
all-features = true
