[package]
name = "primefield"
version = "0.14.0-rc.7"
description = """
Generic implementation of prime fields built on `crypto-bigint`, along with macros for writing
field element newtypes including ones with formally verified arithmetic using `fiat-crypto`
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/primefield"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/primefield"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "field", "prime"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
bigint = { workspace = true }
common = { workspace = true }
ff = { workspace = true }
subtle = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
