[package]
name = "primeorder"
version = "0.14.0-rc.7"
description = """
Pure Rust implementation of complete addition formulas for prime order elliptic
curves (Renes-Costello-Batina 2015). Generic over field elements and curve
equation coefficients
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/primeorder"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/primeorder"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
elliptic-curve = { workspace = true, features = ["arithmetic"] }

# optional dependencies
serdect = { workspace = true, optional = true }

[features]
alloc = ["elliptic-curve/alloc"]
std = ["alloc", "elliptic-curve/std"]

dev = []
hash2curve = []
serde = ["elliptic-curve/serde", "serdect"]

[package.metadata.docs.rs]
all-features = true
