[package]
name = "sm2"
version = "0.14.0-rc.7"
description = """
Pure Rust implementation of the SM2 elliptic curve as defined in the Chinese
national standard GM/T 0003-2012 as well as ISO/IEC 14888. Includes support for
the SM2DSA Digital Signature Algorithm.
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sm2"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/sm2"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "shangmi", "signature", "encryption"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
elliptic-curve = { workspace = true }
fiat-crypto = { workspace = true }
rand_core = { workspace = true }

# optional dependencies
der = { workspace = true, optional = true }
primefield = { workspace = true, optional = true }
primeorder = { workspace = true, optional = true }
rfc6979 = { workspace = true, optional = true }
serdect = { workspace = true, optional = true }
signature = { workspace = true, optional = true, default-features = true }
sm3 = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
elliptic-curve = { workspace = true, features = ["dev"] }
hex-literal = { workspace = true }
proptest = { workspace = true }

[features]
default = ["arithmetic", "dsa", "getrandom", "pke", "pem", "std"]
alloc = ["elliptic-curve/alloc"]
std = ["alloc", "elliptic-curve/std"]

arithmetic = ["dep:primefield", "dep:primeorder", "elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
dsa = ["arithmetic", "dep:rfc6979", "dep:signature", "dep:sm3"]
getrandom = ["elliptic-curve/getrandom"]
pke = ["arithmetic", "dep:sm3", "pkcs8", "alloc"]
pem = ["elliptic-curve/pem", "pkcs8"]
pkcs8 = ["elliptic-curve/pkcs8", "der"]
serde = ["elliptic-curve/serde", "primeorder?/serde", "serdect"]

[[bench]]
name = "dsa"
harness = false
required-features = ["dsa"]

[[bench]]
name = "field"
harness = false
required-features = ["arithmetic"]

[[bench]]
name = "point"
harness = false
required-features = ["arithmetic"]

[[bench]]
name = "scalar"
harness = false
required-features = ["arithmetic"]

[package.metadata.docs.rs]
all-features = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(cpubits, values("16", "32", "64"))',
    'cfg(sm2_backend, values("bignum", "fiat"))' # default: "fiat"
]
