[package]
name = "x448"
version = "0.14.0-pre.7"
authors = ["RustCrypto Developers"]
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "x448", "diffie-hellman", "curve448"]
homepage = "https://docs.rs/x448/"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/x448"
documentation = "https://docs.rs/ed448-goldilocks"
license = "Apache-2.0 OR MIT"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Pure Rust implementation of X448, an elliptic curve Diffie-Hellman function"

[dependencies]
ed448-goldilocks = { workspace = true }
zeroize = { workspace = true }

# optional dependencies
serdect = { workspace = true, optional = true, default-features = true }

[features]
default = ["getrandom"]
getrandom = ["ed448-goldilocks/getrandom"]
static_secrets = []
serde = ["dep:serdect", "ed448-goldilocks/serde"]

[package.metadata.docs.rs]
all-features = true
